# nym

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  test1rc  test_script.sh
.github/workflows/: release.yml  rust.yml
src/: commands.rs  install.rs  list.rs  main.rs  manage.rs  manager.rs  old_commands.rs  sync.rs
src/commands/: mod.rs
src/commands/aliases/: add.rs  edit.rs  list.rs  mod.rs  remove.rs  update.rs
src/commands/groups/: add.rs  list.rs  mod.rs  remove.rs  rename.rs  toggle.rs
src/commands/scripts/: add.rs  edit.rs  list.rs  mod.rs  remove.rs  update.rs
src/database/: aliases.rs  groups.rs  mod.rs
src/file_management/: aliases.rs  json.rs  mod.rs  runcom.rs
src/file_management/database/: aliases.rs  groups.rs  mod.rs  scripts.rs
src/helpers/: display.rs  messages.rs  mod.rs  questions.rs
src/manager/: alias_manager.rs  group_manager.rs  mod.rs  script_manager.rs
src/new_file_management/: mod.rs  runcom.rs
src/new_file_management/database/: aliases.rs  groups.rs  mod.rs
src/runcom/: manage.rs
