[package]
name = "nym"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.4"
console = "0.15.8"
dialoguer = "0.11.0"
indicatif = "0.17.8"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
strsim = "0.11.1"
termion = "4.0.0"
