[package]
name = "nym"
version = "0.1.1"
authors = ["Will Hord<will@willhord.dev>"]
categories = ["command-line-utilities"]
keywords = ["cli", "shell", "tool", "utility"]
license = "GPL-3.0-only"
homepage = "https://github.com/WillHord/nym"
repository = "https://github.com/WillHord/nym"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.4"
console = "0.15.8"
dialoguer = "0.11.0"
dirs = "5.0.1"
indicatif = "0.17.8"
serde = { version = "1.0.203", features = ["derive"] }
inquire = { version = "0.7.5", features = ["date"] }
serde_json = "1.0.117"
strsim = "0.11.1"
regex = "1.10.5"
fancy-regex = "0.13.0"
